# KaspaX

./: .gitignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  GEMINI.md  KASPAX_FIRST_LOGIN.md  KEYCHAIN.md  LICENSE  QWEN.md  README.md  boot.sh  error.md  error.md.save  install.sh  matrix.md  morning.md  switch-setup.sh  verify-active-files.sh  verify-clean.sh  vision.md
applications/kdapps/: Cargo.toml  comment-board.desktop  comment-it.desktop  kaspa-auth.desktop  kdapp-wallet.desktop
applications/kdapps/comment-board/: Cargo.toml  QWEN.md  broken_session_details.md
applications/kdapps/comment-board/.claude/: settings.local.json
applications/kdapps/comment-board/docs/: 07_08_25.txt  27_07_25.txt
applications/kdapps/comment-board/src/participant/: mod.rs
applications/kdapps/comment-it/: Cargo.toml  README.md  ROOM.md
applications/kdapps/comment-it/.claude/: settings.local.json
applications/kdapps/comment-it/.kaspa-auth/: participant-peer-wallet.key  wallet.key
applications/kdapps/comment-it/legacy/: CLAUDE.md  DECENTRALIZATION_VISION.md  GEMINI.md  NEXT_SESSION_ARCHITECTURAL_PLAN.md  OPUS_4_VISION.md  OVERTHINKING.md  PURE_KDAPP_REFACTOR_PLAN.md  ROOM.md  SOME_OLD_OPUS_DESIGN.md  UX_TERMS_AFTER_DEV.md
applications/kdapps/comment-it/src/: episode_runner.rs  organizer.rs
applications/kdapps/comment-it/src/api/http/: types.rs
applications/kdapps/comment-it/test-peer2/.kaspa-auth/: participant-peer-wallet.key
applications/kdapps/kas-draw/: AIfeedbacks.md  Cargo.toml  EPISODE_CONTRACT_EXAMPLE.md
applications/kdapps/kaspa-auth/: AUGUST_SESSION_ROADMAP.md  Cargo.toml  INSTALL.md  STATUS.md  UNIT_TROUBLESHOOTING.md
applications/kdapps/kaspa-auth/.claude/: settings.local.json
applications/kdapps/kaspa-auth/public/: wizard_splash.template.html
applications/kdapps/kaspa-auth/scripts/: import-dev-key-to-keychain.sh  install-systemd-user.sh  kaspa-first-login-wizard.sh  repair-user-unit.sh  set-storage-mode.sh  show-wizard-splash.sh  verify-first-login-enhanced.sh  verify-first-login.sh
applications/kdapps/kaspa-auth/src/api/http/: types.rs
applications/kdapps/kaspa-auth/src/api/http/handlers/: auth-fixed.rs  comments.rs  mod.rs
applications/kdapps/kaspa-auth/src/api/websocket/: auth_handler.rs
applications/kdapps/kaspa-auth/src/daemon/: integration-options.rs  service.rs
applications/kdapps/kaspa-auth/src/utils/: keychain.rs
applications/kdapps/kaspa-auth/systemd/: README.md  kaspa-auth.service
applications/kdapps/kdapp-indexer/: Cargo.toml
applications/kdapps/kdapp-mcp-server/: Cargo.toml
applications/kdapps/kdapp-mcp-server/agent_keys/: .gitignore  README.md
applications/kdapps/kdapp-merchant/: Cargo.toml  TODO-merchant-proxy.local.md
applications/kdapps/kdapp-merchant/src/: client_sender.rs  episode.rs  handler.rs  main.rs  scheduler.rs  sim_router.rs  storage.rs  tcp_router.rs  tlv.rs  udp_router.rs  watcher.rs
applications/kdapps/kdapp-merchant/tests/: fixtures.rs  subscriptions.rs
applications/kdapps/kdapp-wallet/: Cargo.toml  GEMINI.md
applications/kdapps/tictactoe/src/: main.rs
config/hypr/: hyprland.conf
config/systemd/user/: kaspa-auth.service
default/hypr/: apps.conf  autostart.conf  bindings.conf  input.conf  windows.conf
default/hypr/bindings/: utilities.conf
docs/: DEV_ENV_SETUP.md  SDDM_KASPAX_THEME.md  THEME_UPDATE_SUMMARY.md  WAYBAR_TROUBLESHOOTING.md
hyprland-sddm-config/: ADDITIONAL_CUSTOMIZATIONS.md  FINAL_VERIFICATION.md  INSTALL.md  OVERALL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md
hyprland-sddm-config/applications/: hyprland.desktop
hyprland-sddm-config/config/clipman/: clipman.conf
hyprland-sddm-config/config/hypr/: autostart.conf  environment.conf  hyprland.conf  keybindings.conf  windowrules.conf
hyprland-sddm-config/config/mako/: config
hyprland-sddm-config/config/rofi/: config.rasi
hyprland-sddm-config/config/sddm/: sddm.conf
hyprland-sddm-config/config/swaylock/: config
hyprland-sddm-config/config/swayosd/: config
hyprland-sddm-config/config/systemd/user/: kaspa-auth.service  waybar.service
hyprland-sddm-config/config/waybar/: config.jsonc  style.css
hyprland-sddm-config/install/: install-kaspa-apps.sh  install-kaspax-sddm-theme.sh  install.sh
install/apps/: webapps.sh  xtras.sh
install/config/: config.sh  login.sh  power.sh  timezones.sh
install/desktop/: theme.sh
install/development/: nvim.sh
install/preflight/: migrations.sh
new-hyprland-config/: README.md  hyprland.conf  hyprland.desktop
scripts/installers/: README.md  install-brave.sh  install-lm-studio.sh  install-ollama.sh
scripts/theme/: README.md  apply-hyprland-theme.sh  render-wallpaper.sh  switch-hyprland-profile.sh  switch-waybar-management.sh  toggle-waybar-style.sh
themes/kaspax/: hyprland.conf  hyprland.performance.conf  hyprpaper.conf.example  kitty.conf  mako.conf  palette.css  quotes.txt  rofi.rasi  waybar.css  waybar.neon.css
themes/kaspax/sddm/: Main.qml  metadata.desktop  theme.conf
themes/omarchy-kaspa-theme/: README.md  alacritty.toml  apply-theme.sh  btop.theme  hyprland.conf  hyprlock.conf  icons.theme  mako.ini  metadata  neovim.lua  swayosd.css  walker.css  waybar.css
