[workspace]
members = [
  "kdapp",
  "kaspa-auth",
  "kdapp-wallet",
  "comment-it",
  "comment-board",
  "kdapp-mcp-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.70"
authors = ["KaspaX Contributors"]
license = "MIT"
exclude = []
include = ["**/*"]

[workspace.dependencies]
borsh = "1.5.7"
env_logger = "0.11.8"
faster-hex = "0.8.1"
itertools = "0.13.0"
log = "0.4.27"
rand = "0.8.5"
secp256k1 = "0.29.1"
sha2 = "0.10.9"
thiserror = "1.0.69"
tokio = "1.45.1"
hex = "0.4.3"

# Kaspa ecosystem crates (pin to tag used elsewhere)
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
