[package]
name = "comment-it"
version = "0.1.0"
edition = "2021"

[dependencies]
kdapp = { path = "../kdapp" }
borsh = "1.5.1"
secp256k1 = "0.28.0"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.11.3"
clap = "4.5.4"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
sha2 = "0.10.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "3.9.0", features = ["macros", "hex"] }
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7.5", features = ["ws", "tokio"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"

# Kaspa crypto dependencies
kaspa-consensus-core = "*"
kaspa-hashes = "*"
kaspa-addresses = "*"
kaspa-wrpc-client = "*"
kaspa-rpc-core = "*"
