[package]
name = "kaspa-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
kdapp = { path = "../kdapp" }
borsh = "1.5.7"
secp256k1 = { version = "0.29.1", features = ["rand-std"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.40", features = ["derive"] }
thiserror = "1.0.69"
tokio = { version = "1.45.1", features = ["full"] }
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.14.0", features = ["macros", "hex"] }
hex = "0.4.3"
reqwest = { version = "0.12.20", features = ["json"] }
axum = { version = "0.8.4", features = ["ws", "tokio"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.23.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bincode = "1.3.3"
keyring = { version = "3.6.2", features = ["windows-native"] }

# Kaspa crypto dependencies
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
